--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Ashley Wessel</h1>
     <h2>amerino.dance@gmail.com | 614.318.9012</h2>
     <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.18169-9/1923900_21643196902_6467_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=cdbe9c&_nc_ohc=DDdvZFPy9WEAX9_IxPg&_nc_ht=scontent-msp1-1.xx&oh=00_AfDze_wRhrCSVy3eNaYNWMPpm7Y88-dBw-maECT0CWa_dQ&oe=6418BD85"/>
-    <p>Enthusiastic and hard-working customer service professional with a love of learning new skills.</p>
+    <p>Enthusiastic and hard-working customer service professional with a passion for learning new skills.</p>
   </div>  
   
   
@@ -24,8 +24,7 @@
     <h3>Professional Experience</h3>
   </div>  
   
-  
-  
+ 
   
   
   
